# otcbot

./: .gitignore  Cargo.toml  Dockerfile  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
doc/: requirements.tst
doc/source/: conf.py  index.rst
otcbot/: bot_commands.py  callbacks.py  chat_functions.py  config.py  errors.py  init_project.py  main.py  message_responses.py  propose_dep_update.py  storage.py
otcbot/data/project_templates/: README.rst  setup.cfg  tox.ini  zuul.yaml
otcbot/data/project_templates/api-ref/source/: conf.py  index.rst
otcbot/data/project_templates/doc/source/: conf.py  index.rst
otcbot/data/project_templates/releasenotes/source/: conf.py  index.rst
releasenotes/source/: conf.py  index.rst
src/: config.rs  main.rs
